--- a/stories/index.html
+++ b/stories/index.html
@@ -5081,6 +5081,12 @@
       <td><a name="ur0110"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0111</td>
+      <td><a href="/stories/ur/0111_دریائی-گھوڑوں-کے-بال-کیوں-نہیں-ہوتے؟_slides.html" target="_blank">دریائی گھوڑوں کے بال کیوں نہیں ہوتے؟</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ur0111"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0112</td>
       <td><a href="/stories/ur/0112_میرا-جسم_slides.html" target="_blank">میرا جسم</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -5099,6 +5105,12 @@
       <td><a name="ur0129"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0141</td>
+      <td><a href="/stories/ur/0141_چوزی-اور-ہزار-پا_slides.html" target="_blank">چوزی اور ہزار پا</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ur0141"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0156</td>
       <td><a href="/stories/ur/0156_بھوکھا-مگرمچرچھ_slides.html" target="_blank">بھوکھا مگرمچرچھ</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -5111,6 +5123,12 @@
       <td><a name="ur0158"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0201</td>
+      <td><a href="/stories/ur/0201_گدھا-بچہ_slides.html" target="_blank">گدھا بچہ</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ur0201"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0210</td>
       <td><a href="/stories/ur/0210_ٹینگی-اور-گائیں_slides.html" target="_blank">ٹینگی اور گائیں</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -5121,6 +5139,24 @@
       <td><a href="/stories/ur/0231_موسم-کی-کتاب_slides.html" target="_blank">موسم کی کتاب</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ur0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0234</td>
+      <td><a href="/stories/ur/0234_اندیسوا-فٹ-بال-کا-ستارہ_slides.html" target="_blank">اندیسوا فٹ بال کا ستارہ</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ur0234"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0243</td>
+      <td><a href="/stories/ur/0243_دادی-کے-ساتھ-چھٹیاں_slides.html" target="_blank">دادی کے ساتھ چھٹیاں</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ur0243"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0262</td>
+      <td><a href="/stories/ur/0262_میگوزوی_slides.html" target="_blank">میگوزوی</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ur0262"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0271</td>
@@ -5547,7 +5583,7 @@
       <td>0111</td>
       <td><a href="http://africanstorybook.org/stories/why-hippos-have-no-hair">Why hippos have no hair</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0111">ar</a>, <a href="#es0111">es</a>, <a href="#fa0111">fa</a>, <a href="#it0111">it</a>, <a href="#ko0111">ko</a>, <a href="#no0111">no</a>, <a href="#pa0111">pa</a>, <a href="#pl0111">pl</a>, <a href="#tl0111">tl</a>, <a href="#tr0111">tr</a>, <a href="#yue0111">yue</a>, <a href="#zh0111">zh</a></td>
+      <td><a href="#ar0111">ar</a>, <a href="#es0111">es</a>, <a href="#fa0111">fa</a>, <a href="#it0111">it</a>, <a href="#ko0111">ko</a>, <a href="#no0111">no</a>, <a href="#pa0111">pa</a>, <a href="#pl0111">pl</a>, <a href="#tl0111">tl</a>, <a href="#tr0111">tr</a>, <a href="#ur0111">ur</a>, <a href="#yue0111">yue</a>, <a href="#zh0111">zh</a></td>
     </tr>
     <tr>
       <td>0112</td>
@@ -5619,7 +5655,7 @@
       <td>0141</td>
       <td><a href="http://africanstorybook.org/stories/chicken-and-millipede">Chicken and Millipede</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0141">ar</a>, <a href="#de0141">de</a>, <a href="#es0141">es</a>, <a href="#fa0141">fa</a>, <a href="#it0141">it</a>, <a href="#ko0141">ko</a>, <a href="#no0141">no</a>, <a href="#pa0141">pa</a>, <a href="#pl0141">pl</a>, <a href="#tl0141">tl</a>, <a href="#yue0141">yue</a>, <a href="#zh0141">zh</a></td>
+      <td><a href="#ar0141">ar</a>, <a href="#de0141">de</a>, <a href="#es0141">es</a>, <a href="#fa0141">fa</a>, <a href="#it0141">it</a>, <a href="#ko0141">ko</a>, <a href="#no0141">no</a>, <a href="#pa0141">pa</a>, <a href="#pl0141">pl</a>, <a href="#tl0141">tl</a>, <a href="#ur0141">ur</a>, <a href="#yue0141">yue</a>, <a href="#zh0141">zh</a></td>
     </tr>
     <tr>
       <td>0143</td>
@@ -5685,7 +5721,7 @@
       <td>0201</td>
       <td><a href="http://africanstorybook.org/stories/donkey-child">Donkey Child</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0201">ar</a>, <a href="#es0201">es</a>, <a href="#fa0201">fa</a>, <a href="#it0201">it</a>, <a href="#ko0201">ko</a>, <a href="#pa0201">pa</a>, <a href="#pl0201">pl</a>, <a href="#tl0201">tl</a>, <a href="#yue0201">yue</a>, <a href="#zh0201">zh</a></td>
+      <td><a href="#ar0201">ar</a>, <a href="#es0201">es</a>, <a href="#fa0201">fa</a>, <a href="#it0201">it</a>, <a href="#ko0201">ko</a>, <a href="#pa0201">pa</a>, <a href="#pl0201">pl</a>, <a href="#tl0201">tl</a>, <a href="#ur0201">ur</a>, <a href="#yue0201">yue</a>, <a href="#zh0201">zh</a></td>
     </tr>
     <tr>
       <td>0204</td>
@@ -5745,13 +5781,13 @@
       <td>0234</td>
       <td><a href="http://africanstorybook.org/stories/andiswa-soccer-star">Andiswa Soccer Star</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0234">ar</a>, <a href="#es0234">es</a>, <a href="#fa0234">fa</a>, <a href="#gu0234">gu</a>, <a href="#it0234">it</a>, <a href="#ko0234">ko</a>, <a href="#no0234">no</a>, <a href="#pa0234">pa</a>, <a href="#pl0234">pl</a>, <a href="#tl0234">tl</a>, <a href="#yue0234">yue</a>, <a href="#zh0234">zh</a></td>
+      <td><a href="#ar0234">ar</a>, <a href="#es0234">es</a>, <a href="#fa0234">fa</a>, <a href="#gu0234">gu</a>, <a href="#it0234">it</a>, <a href="#ko0234">ko</a>, <a href="#no0234">no</a>, <a href="#pa0234">pa</a>, <a href="#pl0234">pl</a>, <a href="#tl0234">tl</a>, <a href="#ur0234">ur</a>, <a href="#yue0234">yue</a>, <a href="#zh0234">zh</a></td>
     </tr>
     <tr>
       <td>0243</td>
       <td><a href="http://africanstorybook.org/stories/holidays-grandmother">Holidays with grandmother</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0243">ar</a>, <a href="#bn0243">bn</a>, <a href="#es0243">es</a>, <a href="#fa0243">fa</a>, <a href="#it0243">it</a>, <a href="#ko0243">ko</a>, <a href="#pa0243">pa</a>, <a href="#pl0243">pl</a>, <a href="#tl0243">tl</a>, <a href="#tr0243">tr</a>, <a href="#yue0243">yue</a>, <a href="#zh0243">zh</a></td>
+      <td><a href="#ar0243">ar</a>, <a href="#bn0243">bn</a>, <a href="#es0243">es</a>, <a href="#fa0243">fa</a>, <a href="#it0243">it</a>, <a href="#ko0243">ko</a>, <a href="#pa0243">pa</a>, <a href="#pl0243">pl</a>, <a href="#tl0243">tl</a>, <a href="#tr0243">tr</a>, <a href="#ur0243">ur</a>, <a href="#yue0243">yue</a>, <a href="#zh0243">zh</a></td>
     </tr>
     <tr>
       <td>0248</td>
@@ -5769,7 +5805,7 @@
       <td>0262</td>
       <td><a href="http://africanstorybook.org/stories/magozwe-0">Magozwe</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0262">ar</a>, <a href="#es0262">es</a>, <a href="#fa0262">fa</a>, <a href="#it0262">it</a>, <a href="#ko0262">ko</a>, <a href="#pa0262">pa</a>, <a href="#pl0262">pl</a>, <a href="#tl0262">tl</a>, <a href="#yue0262">yue</a>, <a href="#zh0262">zh</a></td>
+      <td><a href="#ar0262">ar</a>, <a href="#es0262">es</a>, <a href="#fa0262">fa</a>, <a href="#it0262">it</a>, <a href="#ko0262">ko</a>, <a href="#pa0262">pa</a>, <a href="#pl0262">pl</a>, <a href="#tl0262">tl</a>, <a href="#ur0262">ur</a>, <a href="#yue0262">yue</a>, <a href="#zh0262">zh</a></td>
     </tr>
     <tr>
       <td>0264</td>
