--- a/stories/nn/0302_eld.html
+++ b/stories/nn/0302_eld.html
@@ -56,28 +56,28 @@ Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br>nynorsk</div><di
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/03.jpg" /></p>
 
-<p>Elden brenn.</p>
+<p>Eld brenn.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/04.jpg" /></p>
 
-<p>Elden lagar mat.</p>
+<p>Eld lagar mat.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/05.jpg" /></p>
 
-<p>Elden gjev varme.</p>
+<p>Eld gjev varme.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/06.jpg" /></p>
 
-<p>Elden gjev lys.</p>
+<p>Eld gjev lys.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -91,7 +91,7 @@ Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br>nynorsk</div><di
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/08.jpg" /></p>
 
-<p>Elden er fantastisk.</p>
+<p>Eld er fantastisk.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
