--- a/stories/no/0262_magozwe_slides.html
+++ b/stories/no/0262_magozwe_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>کالای با گیاهان صحبت می کند - Global African Storybook</title>
+  <title>Magozwe - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="کالای-با-گیاهان-صحبت-می-کند" class="slide level1">
-<h1 dir="rtl" dir="rtl" dir="rtl" dir="rtl">کالای با گیاهان صحبت می کند</h1>
+<section id="magozwe" class="slide level1">
+<h1>Magozwe</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
-<p dir="rtl">این کالای است. او هفت سال سن دارد. در زبان لوباکوسو که زبان او می باشد معنای اسمش - دختر خوب – است.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/02.jpg" /></p>
+<p>I den travle byen Nairobi, langt fra det omsorgsfulle livet hjemme, bodde det en gjeng hjemløse gutter. De tok hver dag akkurat som den kom. En morgen pakket guttene sammen mattene sine etter at de hadde sovet på det kalde fortauet. For å fordrive kulden lagde de et bål av søppel. En av guttene i gjengen var Magozwe. Han var den yngste.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
-<p dir="rtl">کالای هر روز صبح که بیدار می شود با درخت پرتقال صحبت می کند. درخت پرتقال لطفا، حسابی رشد کن و به ما پرتقال های رسیده ی خوب بده.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/03.jpg" /></p>
+<p>Da Magozwes foreldre døde var han bare fem år. Han dro for å bo med onkelen sin. Denne mannen brydde seg ikke om barnet. Han ga ikke Magozwe nok mat. Han tvang gutten til å jobbe hardt.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
-<p dir="rtl">کالای تا مدرسه راه می رود. در راه با علف ها صحبت می کند. علف ها، لطفا بیشتر رشد کنید و سبز شوید و خشک نشوید.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/04.jpg" /></p>
+<p>Hvis Magozwe klagde eller stilte spørsmål, slo onkelen hans ham. Når Magozwe spurte om han kunne gå på skolen, slo onkelen hans ham og sa: &quot;Du er for dum for å lære noe som helst.&quot; Etter tre år med denne behandlingen rømte Magozwe fra onkelen sin. Han begynte å bo på gata.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
-<p dir="rtl">کالای از کنار گل های وحشی رد می شود. گلهای وحشی لطفا، مرتب شکوفه بزنید که من بتوانم شما را در موهایم قرار دهم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/05.jpg" /></p>
+<p>Livet på gata var vanskelig og de fleste guttene slet hver dag bare for å finne mat. Noen ganger ble de arrestert, andre ganger ble de slått. Når de ble syke var det ingen som kunne hjelpe dem. Gjengen var avhengig av de få pengene de fikk fra å tigge og fra å selge plast og annet til resirkulering. Livet var enda vanskeligere på grunn av slåsskamper med rivaliserende gjenger som ville ha kontroll over deler av byen.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
-<p dir="rtl">در مدرسه، کالای با درختی که در وسط حیاط بود صحبت کرد.&quot; درخت لطفا، شاخه های بزرگ برویان تا ما بتوانیم زیر سایه‌ی تو درس بخوانیم.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/06.jpg" /></p>
+<p>En dag mens Magozwe lette i noen søppelbøtter, fant han en gammel fillete barnebok. Han fjernet møkka fra den og la den i sekken sin. Hver påfølgende dag tok han ut boka og så på bildene. Han visste ikke hvordan han skulle lese ordene.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
-<p dir="rtl">کالای با حصار اطراف مدرسه صحبت می کند. &quot;لطفا محکم و قوی رشد کن و جلوی وارد شدن افراد بد را بگیر.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/07.jpg" /></p>
+<p>Bildene fortalte fortellingen om en gutt som vokste opp til å bli pilot. Magozwe pleide å dagdrømme om å bli pilot. Noen ganger innbilte han seg at han var gutten i fortellingen.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
-<p dir="rtl">وقتی کالای از مدرسه به خانه برگشت، درخت پرتقال را دید. کالای پرسید، &quot;آیا پرتقال هایت هنوز نرسیده ؟&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/08.jpg" /></p>
+<p>Det var kaldt og Magozwe stod langs veien og tagg. En mann gikk bort til ham. &quot;Hei, jeg heter Thomas. Jeg bor i nærheten, på et sted der du kan få deg noe å spise,&quot; sa han og pekte på et gult hus med blått tak. &quot;Jeg håper du drar dit for å få deg litt mat?&quot; spurte han. Magozwe så på ham, og deretter på huset. &quot;Kanskje,&quot; sa han, og gikk.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
-<p dir="rtl">کالای آهی کشید وگفت، &quot;پرتقال ها هنوز سبز هستند.&quot; کالای گفت، &quot;فردا تو را خواهم دید درخت پرتقال.&quot; &quot;شاید بعد تویک پرتقال رسیده برای من داشته باشی!&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/09.jpg" /></p>
+<p>I månedene som fulgte ble de hjemløse guttene vant til å se Thomas. Han likte å snakke med folk, spesielt de som bodde på gata. Thomas hørte på fortellinger om livene til folk. Han var seriøs og tålmodig, aldri frekk eller respektløs. Noen av guttene begynte å dra til det gule og blå huset for å få mat midt på dagen.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,17 +168,89 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" dir="rtl" dir="rtl" dir="rtl" id="کالای-با-گیاهان-صحبت-می-کند-1">کالای با گیاهان صحبت می کند</h2>
-<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Jesse Pietersen<br> <strong>Translation:</strong> Marzieh Mohammadian Haghighi<br> <strong>Language:</strong> Persian<br>
-<p dir="rtl">
-This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/khalai-talks-plants'>here</a>
-<p dir="rtl"><div class="license">
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/10.jpg" /></p>
+<p>Magozwe satt på fortauet og kikket i bildeboka da Thomas kom og satte seg ved siden av ham. &quot;Hva handler fortellingen om?&quot; spurte Thomas. &quot;Den handler om en gutt som blir pilot,&quot; svarte Magozwe. &quot;Hva heter gutten?&quot; spurte Thomas. &quot;Jeg vet ikke, jeg kan ikke lese,&quot; svarte Magozwe lavt.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/11.jpg" /></p>
+<p>Da de møttes begynte Magozwe å fortelle sin egen historie til Thomas. Det var historien om onkelen hans og hvorfor han rømte hjemmefra. Thomas snakket ikke mye, og han sa ikke til Magozwe hva han skulle gjøre, men han lyttet alltid oppmerksomt. Noen ganger snakket de sammen mens de spiste i det gule huset med det blå taket.</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/12.jpg" /></p>
+<p>Omkring Magozwes tiende fødselsdag ga Thomas ham en ny barnebok. Det var fortellingen om en landsbygutt som vokste opp til å bli en berømt fotballspiller. Thomas leste den fortellingen for Magozwe mange ganger, helt til han en dag sa: &quot;Jeg synes det er på tide at du går på skolen og lærer å lese. Hva synes du?&quot; Thomas forklarte at han visste om et sted hvor barn kunne bo og gå på skole.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/13.jpg" /></p>
+<p>Magozwe tenkte på dette nye stedet og på å gå på skolen. Hva om onkelen hans hadde rett og han var for dum for å lære noe? Hva om de slo ham på dette nye stedet? Han var redd. &quot;Kanskje det er bedre å bo på gata,&quot; tenkte han.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/14.jpg" /></p>
+<p>Han snakket om det han var redd for med Thomas. Med tiden forsikret mannen gutten om at livet kunne bli bedre på det nye stedet.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/15.jpg" /></p>
+<p>Dermed flyttet Magozwe inn i et rom i et hus med grønt tak. Han delte rommet med to andre gutter. Tilsammen var det ti barn som bodde i det huset. Sammen med tante Cissy og mannen hennes, tre hunder, en katt, og en gammel geit.</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/16.jpg" /></p>
+<p>Magozwe begynte på skolen og det var vanskelig. Han hadde mye å ta igjen. Av og til ville han gi opp. Men han tenkte på piloten og fotballspilleren i barnebøkene. Som dem ga han ikke opp.</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/17.jpg" /></p>
+<p>Magozwe satt på tunet ved huset med det grønne taket og leste en barnebok fra skolen. Thomas kom og satte seg ved siden av ham. &quot;Hva handler fortellingen om?&quot; spurte Thomas. &quot;Den handler om en gutt som blir lærer,&quot; svarte Magozwe. &quot;Hva heter gutten?&quot; spurte Thomas. &quot;Han heter Magozwe,&quot; svarte Magozwe med et smil.</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="magozwe-1">Magozwe</h2>
+<strong>Tekst:</strong> Lesley Koyi<br> <strong>Illustrasjoner:</strong> Wiehan de Jager<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
+<p>
+Denne fortellingen kommer fra <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href='http://africanstorybook.org/'>African Storybook Project</a> til alle verdens språk.
+<p>
+Du kan se den originale fortellingen på ASP-websida <a href='http://africanstorybook.org/stories/magozwe-0'>her</a>
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
+<p><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
