--- a/stories/index.html
+++ b/stories/index.html
@@ -2759,6 +2759,12 @@
       <td><a name="no0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0030</td>
+      <td><a href="/stories/no/0030_følelser_slides.html" target="_blank">Følelser</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="no0030"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0052</td>
       <td><a href="/stories/no/0052_simbegwire_slides.html" target="_blank">Simbegwire</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2897,6 +2903,12 @@
       <td><a name="no0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0262</td>
+      <td><a href="/stories/no/0262_magozwe_slides.html" target="_blank">Magozwe</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="no0262"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0271</td>
       <td><a href="/stories/no/0271_to_slides.html" target="_blank">To</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2931,6 +2943,12 @@
       <td><a href="/stories/no/0337_voksbarna_slides.html" target="_blank">Voksbarna</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="no0337"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0342</td>
+      <td><a href="/stories/no/0342_straff_slides.html" target="_blank">Straff</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="no0342"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0360</td>
@@ -5457,7 +5475,7 @@
       <td>0030</td>
       <td><a href="http://africanstorybook.org/stories/feelings">Feelings</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#aeb0030">aeb</a>, <a href="#ar0030">ar</a>, <a href="#de0030">de</a>, <a href="#es0030">es</a>, <a href="#fa0030">fa</a>, <a href="#hi0030">hi</a>, <a href="#it0030">it</a>, <a href="#ko0030">ko</a>, <a href="#pa0030">pa</a>, <a href="#pl0030">pl</a>, <a href="#ru0030">ru</a>, <a href="#tl0030">tl</a>, <a href="#tr0030">tr</a>, <a href="#ur0030">ur</a>, <a href="#vi0030">vi</a>, <a href="#yue0030">yue</a>, <a href="#zh0030">zh</a></td>
+      <td><a href="#aeb0030">aeb</a>, <a href="#ar0030">ar</a>, <a href="#de0030">de</a>, <a href="#es0030">es</a>, <a href="#fa0030">fa</a>, <a href="#hi0030">hi</a>, <a href="#it0030">it</a>, <a href="#ko0030">ko</a>, <a href="#no0030">no</a>, <a href="#pa0030">pa</a>, <a href="#pl0030">pl</a>, <a href="#ru0030">ru</a>, <a href="#tl0030">tl</a>, <a href="#tr0030">tr</a>, <a href="#ur0030">ur</a>, <a href="#vi0030">vi</a>, <a href="#yue0030">yue</a>, <a href="#zh0030">zh</a></td>
     </tr>
     <tr>
       <td>0049</td>
@@ -5823,7 +5841,7 @@
       <td>0262</td>
       <td><a href="http://africanstorybook.org/stories/magozwe-0">Magozwe</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0262">ar</a>, <a href="#es0262">es</a>, <a href="#fa0262">fa</a>, <a href="#it0262">it</a>, <a href="#ko0262">ko</a>, <a href="#pa0262">pa</a>, <a href="#pl0262">pl</a>, <a href="#tl0262">tl</a>, <a href="#ur0262">ur</a>, <a href="#yue0262">yue</a>, <a href="#zh0262">zh</a></td>
+      <td><a href="#ar0262">ar</a>, <a href="#es0262">es</a>, <a href="#fa0262">fa</a>, <a href="#it0262">it</a>, <a href="#ko0262">ko</a>, <a href="#no0262">no</a>, <a href="#pa0262">pa</a>, <a href="#pl0262">pl</a>, <a href="#tl0262">tl</a>, <a href="#ur0262">ur</a>, <a href="#yue0262">yue</a>, <a href="#zh0262">zh</a></td>
     </tr>
     <tr>
       <td>0264</td>
@@ -5961,7 +5979,7 @@
       <td>0342</td>
       <td><a href="http://africanstorybook.org/stories/punishment">Punishment</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0342">ar</a>, <a href="#es0342">es</a>, <a href="#fa0342">fa</a>, <a href="#it0342">it</a>, <a href="#ko0342">ko</a>, <a href="#pa0342">pa</a>, <a href="#pl0342">pl</a>, <a href="#tl0342">tl</a>, <a href="#ur0342">ur</a>, <a href="#vi0342">vi</a>, <a href="#yue0342">yue</a>, <a href="#zh0342">zh</a></td>
+      <td><a href="#ar0342">ar</a>, <a href="#es0342">es</a>, <a href="#fa0342">fa</a>, <a href="#it0342">it</a>, <a href="#ko0342">ko</a>, <a href="#no0342">no</a>, <a href="#pa0342">pa</a>, <a href="#pl0342">pl</a>, <a href="#tl0342">tl</a>, <a href="#ur0342">ur</a>, <a href="#vi0342">vi</a>, <a href="#yue0342">yue</a>, <a href="#zh0342">zh</a></td>
     </tr>
     <tr>
       <td>0359</td>
