--- a/stories/no/0302_ild.html
+++ b/stories/no/0302_ild.html
@@ -56,28 +56,28 @@ Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br>norsk</div><div 
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/03.jpg" /></p>
 
-<p>Ilden brenner.</p>
+<p>Ild brenner.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/04.jpg" /></p>
 
-<p>Ilden lager mat.</p>
+<p>Ild lager mat.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/05.jpg" /></p>
 
-<p>Ilden gir varme.</p>
+<p>Ild gir varme.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/06.jpg" /></p>
 
-<p>Ilden gir lys.</p>
+<p>Ild gir lys.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -91,7 +91,7 @@ Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br>norsk</div><div 
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/08.jpg" /></p>
 
-<p>Ilden er fantastisk.</p>
+<p>Ild er fantastisk.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
