--- a/stories/no/0302_ild_slides.html
+++ b/stories/no/0302_ild_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/03.jpg" /></p>
-<p>Ilden brenner.</p>
+<p>Ild brenner.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/04.jpg" /></p>
-<p>Ilden lager mat.</p>
+<p>Ild lager mat.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/05.jpg" /></p>
-<p>Ilden gir varme.</p>
+<p>Ild gir varme.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/06.jpg" /></p>
-<p>Ilden gir lys.</p>
+<p>Ild gir lys.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/08.jpg" /></p>
-<p>Ilden er fantastisk.</p>
+<p>Ild er fantastisk.</p>
 <center>
 <strong>7</strong>
 </center>
