--- a/stories/no/0342_straff_slides.html
+++ b/stories/no/0342_straff_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>کالای با گیاهان صحبت می کند - Global African Storybook</title>
+  <title>Straff - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="کالای-با-گیاهان-صحبت-می-کند" class="slide level1">
-<h1 dir="rtl" dir="rtl" dir="rtl" dir="rtl">کالای با گیاهان صحبت می کند</h1>
+<section id="straff" class="slide level1">
+<h1>Straff</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
-<p dir="rtl">این کالای است. او هفت سال سن دارد. در زبان لوباکوسو که زبان او می باشد معنای اسمش - دختر خوب – است.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/02.jpg" /></p>
+<p>En dag fikk mamma mye frukt.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
-<p dir="rtl">کالای هر روز صبح که بیدار می شود با درخت پرتقال صحبت می کند. درخت پرتقال لطفا، حسابی رشد کن و به ما پرتقال های رسیده ی خوب بده.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/03.jpg" /></p>
+<p>&quot;Når kan vi få litt frukt?&quot; spør vi. &quot;Vi spiser frukten i kveld.&quot; sier mamma.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
-<p dir="rtl">کالای تا مدرسه راه می رود. در راه با علف ها صحبت می کند. علف ها، لطفا بیشتر رشد کنید و سبز شوید و خشک نشوید.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/04.jpg" /></p>
+<p>Min bror Rahim er grådig. Han smaker på all frukten. Han spiser mye av den.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
-<p dir="rtl">کالای از کنار گل های وحشی رد می شود. گلهای وحشی لطفا، مرتب شکوفه بزنید که من بتوانم شما را در موهایم قرار دهم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
+<p>&quot;Se hva Rahim gjorde&quot; roper lillebroren min. &quot;Rahim er slem og egoistiisk&quot; sier jeg.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
-<p dir="rtl">در مدرسه، کالای با درختی که در وسط حیاط بود صحبت کرد.&quot; درخت لطفا، شاخه های بزرگ برویان تا ما بتوانیم زیر سایه‌ی تو درس بخوانیم.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/06.jpg" /></p>
+<p>Mamma er sint på Rahim.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
-<p dir="rtl">کالای با حصار اطراف مدرسه صحبت می کند. &quot;لطفا محکم و قوی رشد کن و جلوی وارد شدن افراد بد را بگیر.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/07.jpg" /></p>
+<p>Vi er også sinte på Rahim. Men Rahim er ikke lei seg.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
-<p dir="rtl">وقتی کالای از مدرسه به خانه برگشت، درخت پرتقال را دید. کالای پرسید، &quot;آیا پرتقال هایت هنوز نرسیده ؟&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/08.jpg" /></p>
+<p>&quot;Skal du ikke strafffe Rahim?&quot; spør lillebror.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
-<p dir="rtl">کالای آهی کشید وگفت، &quot;پرتقال ها هنوز سبز هستند.&quot; کالای گفت، &quot;فردا تو را خواهم دید درخت پرتقال.&quot; &quot;شاید بعد تویک پرتقال رسیده برای من داشته باشی!&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/09.jpg" /></p>
+<p>&quot;Rahim. du vil snart angre&quot; advarer mamma.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,17 +168,53 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" dir="rtl" dir="rtl" dir="rtl" id="کالای-با-گیاهان-صحبت-می-کند-1">کالای با گیاهان صحبت می کند</h2>
-<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Jesse Pietersen<br> <strong>Translation:</strong> Marzieh Mohammadian Haghighi<br> <strong>Language:</strong> Persian<br>
-<p dir="rtl">
-This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/khalai-talks-plants'>here</a>
-<p dir="rtl"><div class="license">
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/10.jpg" /></p>
+<p>Rahim begynner å føle seg uvel.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/11.jpg" /></p>
+<p>&quot;Jeg har så vondt i magen&quot; hvisker Rahim.</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/12.jpg" /></p>
+<p>Mamma visste at dette ville skje. Frukten straffer Rahim.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/13.jpg" /></p>
+<p>Senere sier Rahim unnskyld til oss. &quot;Jeg vil aldri være så grådig igjen&quot; lover han. Vi tror ham alle sammen.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="straff-1">Straff</h2>
+<strong>Tekst:</strong> Adelheid Marie Bwire<br> <strong>Illustrasjoner:</strong> Melany Pietersen<br> <strong>Oversettelse:</strong> Olav Sigmond<br> <strong>Språk:</strong> norsk<br>
+<p>
+Denne fortellingen kommer fra <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href='http://africanstorybook.org/'>African Storybook Project</a> til alle verdens språk.
+<p>
+Du kan se den originale fortellingen på ASP-websida <a href='http://africanstorybook.org/stories/punishment'>her</a>
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
+<p><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
