--- a/stories/index.html
+++ b/stories/index.html
@@ -82,6 +82,7 @@
 <li class="toc"><a href="#german">German [Deutsch]</a></li><br>
 <li class="toc"><a href="#gujarati">Gujarati [ગુજરાતી]</a></li><br>
 <li class="toc"><a href="#hindi">Hindi [हिन्दी]</a></li><br>
+<li class="toc"><a href="#indonesian">Indonesian [Bahasa Indonesia]</a></li><br>
 <li class="toc"><a href="#italian">Italian [Italiano]</a></li><br>
 <li class="toc"><a href="#jamaican-creole">Jamaican Creole [Patwa]</a></li><br>
 <li class="toc"><a href="#japanese">Japanese [日本語]</a></li><br>
@@ -2034,6 +2035,27 @@
       <td><a href="/stories/hi/0360_बिल्लीयो-की-गिनती-करना_slides.html" target="_blank">बिल्लीयो की गिनती करना</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm9TTkFCSVpEUTA"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="hi0360"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+  </tbody>
+</table>
+
+   </ul>
+  <h3><a name='indonesian'>Indonesian [Bahasa Indonesia]</a></h3>
+   <ul><table>
+  <thead>
+    <tr>
+      <th>Story #</th>
+      <th>Title</th>
+      <th class="dl">Download</th>
+      <th class="lic">License</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>0253</td>
+      <td><a href="/stories/id/0253_buku-bergambarku_slides.html" target="_blank">Buku bergambarku</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="id0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -5835,7 +5857,7 @@
       <td>0253</td>
       <td><a href="http://africanstorybook.org/stories/my-picture-book-0">My Picture Book</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#aeb0253">aeb</a>, <a href="#ar0253">ar</a>, <a href="#bn0253">bn</a>, <a href="#de0253">de</a>, <a href="#eo0253">eo</a>, <a href="#es0253">es</a>, <a href="#fa0253">fa</a>, <a href="#gu0253">gu</a>, <a href="#hi0253">hi</a>, <a href="#it0253">it</a>, <a href="#ja0253">ja</a>, <a href="#jam0253">jam</a>, <a href="#ko0253">ko</a>, <a href="#ms0253">ms</a>, <a href="#ne0253">ne</a>, <a href="#nl0253">nl</a>, <a href="#nn0253">nn</a>, <a href="#no0253">no</a>, <a href="#pl0253">pl</a>, <a href="#ru0253">ru</a>, <a href="#sr0253">sr</a>, <a href="#tl0253">tl</a>, <a href="#uk0253">uk</a>, <a href="#vi0253">vi</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
+      <td><a href="#aeb0253">aeb</a>, <a href="#ar0253">ar</a>, <a href="#bn0253">bn</a>, <a href="#de0253">de</a>, <a href="#eo0253">eo</a>, <a href="#es0253">es</a>, <a href="#fa0253">fa</a>, <a href="#gu0253">gu</a>, <a href="#hi0253">hi</a>, <a href="#id0253">id</a>, <a href="#it0253">it</a>, <a href="#ja0253">ja</a>, <a href="#jam0253">jam</a>, <a href="#ko0253">ko</a>, <a href="#ms0253">ms</a>, <a href="#ne0253">ne</a>, <a href="#nl0253">nl</a>, <a href="#nn0253">nn</a>, <a href="#no0253">no</a>, <a href="#pl0253">pl</a>, <a href="#ru0253">ru</a>, <a href="#sr0253">sr</a>, <a href="#tl0253">tl</a>, <a href="#uk0253">uk</a>, <a href="#vi0253">vi</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
     </tr>
     <tr>
       <td>0262</td>
