--- a/stories/index.html
+++ b/stories/index.html
@@ -2757,6 +2757,12 @@
       <td><a name="no0003"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0004</td>
+      <td><a href="/stories/no/0004_geit-hund-og-ku_slides.html" target="_blank">Geit, Hund og Ku</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="no0004"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0006</td>
       <td><a href="/stories/no/0006_anansi-og-visdommen_slides.html" target="_blank">Anansi og visdommen</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2941,6 +2947,12 @@
       <td><a href="/stories/no/0287_herr-flue-og-herr-storhode_slides.html" target="_blank">Herr Flue og herr Storhode</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="no0287"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0296</td>
+      <td><a href="/stories/no/0296_bananselgeren-tom_slides.html" target="_blank">Bananselgeren Tom</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="no0296"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0302</td>
@@ -5443,7 +5455,7 @@
       <td>0004</td>
       <td><a href="http://africanstorybook.org/stories/goat-dog-and-cow">Goat, Dog and Cow</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0004">ar</a>, <a href="#bn0004">bn</a>, <a href="#de0004">de</a>, <a href="#es0004">es</a>, <a href="#fa0004">fa</a>, <a href="#hi0004">hi</a>, <a href="#it0004">it</a>, <a href="#ko0004">ko</a>, <a href="#pa0004">pa</a>, <a href="#pl0004">pl</a>, <a href="#ru0004">ru</a>, <a href="#tl0004">tl</a>, <a href="#tr0004">tr</a>, <a href="#ur0004">ur</a>, <a href="#yue0004">yue</a>, <a href="#zh0004">zh</a></td>
+      <td><a href="#ar0004">ar</a>, <a href="#bn0004">bn</a>, <a href="#de0004">de</a>, <a href="#es0004">es</a>, <a href="#fa0004">fa</a>, <a href="#hi0004">hi</a>, <a href="#it0004">it</a>, <a href="#ko0004">ko</a>, <a href="#no0004">no</a>, <a href="#pa0004">pa</a>, <a href="#pl0004">pl</a>, <a href="#ru0004">ru</a>, <a href="#tl0004">tl</a>, <a href="#tr0004">tr</a>, <a href="#ur0004">ur</a>, <a href="#yue0004">yue</a>, <a href="#zh0004">zh</a></td>
     </tr>
     <tr>
       <td>0006</td>
@@ -5917,7 +5929,7 @@
       <td>0296</td>
       <td><a href="http://africanstorybook.org/stories/tom-banana-seller">Tom the banana seller</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0296">ar</a>, <a href="#es0296">es</a>, <a href="#fa0296">fa</a>, <a href="#it0296">it</a>, <a href="#ko0296">ko</a>, <a href="#pa0296">pa</a>, <a href="#pl0296">pl</a>, <a href="#tl0296">tl</a>, <a href="#ur0296">ur</a>, <a href="#yue0296">yue</a>, <a href="#zh0296">zh</a></td>
+      <td><a href="#ar0296">ar</a>, <a href="#es0296">es</a>, <a href="#fa0296">fa</a>, <a href="#it0296">it</a>, <a href="#ko0296">ko</a>, <a href="#no0296">no</a>, <a href="#pa0296">pa</a>, <a href="#pl0296">pl</a>, <a href="#tl0296">tl</a>, <a href="#ur0296">ur</a>, <a href="#yue0296">yue</a>, <a href="#zh0296">zh</a></td>
     </tr>
     <tr>
       <td>0302</td>
