--- a/stories/no/0004_geit-hund-og-ku_slides.html
+++ b/stories/no/0004_geit-hund-og-ku_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>کالای با گیاهان صحبت می کند - Global African Storybook</title>
+  <title>Geit, Hund og Ku - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="کالای-با-گیاهان-صحبت-می-کند" class="slide level1">
-<h1 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl">کالای با گیاهان صحبت می کند</h1>
+<section id="geit-hund-og-ku" class="slide level1">
+<h1>Geit, Hund og Ku</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
-<p dir="rtl">این کالای است. او هفت سال سن دارد. در زبان لوباکوسو که زبان او می باشد معنای اسمش - دختر خوب – است.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/02.jpg" /></p>
+<p>Geit, Hund og Ku var gode venner. En dag dro de på en reise med en buss.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
-<p dir="rtl">کالای هر روز صبح که بیدار می شود با درخت پرتقال صحبت می کند. درخت پرتقال لطفا، حسابی رشد کن و به ما پرتقال های رسیده ی خوب بده.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/03.jpg" /></p>
+<p>Da de ankom bestemmelsesstedet, ba sjåføren dem om betale billetten sin. Ku betalte sin billett.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
-<p dir="rtl">کالای تا مدرسه راه می رود. در راه با علف ها صحبت می کند. علف ها، لطفا بیشتر رشد کنید و سبز شوید و خشک نشوید.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/04.jpg" /></p>
+<p>Ku betalte litt ekstra fordi han ikke hadde akkurat med penger.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
-<p dir="rtl">کالای از کنار گل های وحشی رد می شود. گلهای وحشی لطفا، مرتب شکوفه بزنید که من بتوانم شما را در موهایم قرار دهم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/05.jpg" /></p>
+<p>Sjåføren var på vei til å gi Hund sin veksel, da Geit stakk av uten å betale.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
-<p dir="rtl">در مدرسه، کالای با درختی که در وسط حیاط بود صحبت کرد.&quot; درخت لطفا، شاخه های بزرگ برویان تا ما بتوانیم زیر سایه‌ی تو درس بخوانیم.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/06.jpg" /></p>
+<p>Sjåføren ble veldig irritert. Han kjørte avgårde uten å gi tilbake Hunds veksel.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
-<p dir="rtl">کالای با حصار اطراف مدرسه صحبت می کند. &quot;لطفا محکم و قوی رشد کن و جلوی وارد شدن افراد بد را بگیر.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/07.jpg" /></p>
+<p>Det er derfor at Hund, selv i dag, løper mot biler for å sjekke om han sersjåføren som skylder ham veksel.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
-<p dir="rtl">وقتی کالای از مدرسه به خانه برگشت، درخت پرتقال را دید. کالای پرسید، &quot;آیا پرتقال هایت هنوز نرسیده ؟&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/08.jpg" /></p>
+<p>Geit stikker når han hører en bil. Hun er redd for at hun vil bli arrestert for ikke å ha betalt billetten.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
-<p dir="rtl">کالای آهی کشید وگفت، &quot;پرتقال ها هنوز سبز هستند.&quot; کالای گفت، &quot;فردا تو را خواهم دید درخت پرتقال.&quot; &quot;شاید بعد تویک پرتقال رسیده برای من داشته باشی!&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/09.jpg" /></p>
+<p>Og Ku bryr seg ikke når det kommer en bil. Ku bruker god tid når han krysser veien, fordi hun vet at hun betalte hele billetten sin.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,17 +168,17 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" id="کالای-با-گیاهان-صحبت-می-کند-1">کالای با گیاهان صحبت می کند</h2>
-<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Jesse Pietersen<br> <strong>Translation:</strong> Marzieh Mohammadian Haghighi<br> <strong>Language:</strong> Persian<br>
-<p dir="rtl">
-This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/khalai-talks-plants'>here</a>
-<p dir="rtl"><div class="license">
+<h2 id="geit-hund-og-ku-1">Geit, Hund og Ku</h2>
+<strong>Tekst:</strong> Fabian Wakholi<br> <strong>Illustrasjoner:</strong> Marleen Visser<br> <strong>Oversettelse:</strong> Olav Sigmond<br> <strong>Språk:</strong> norsk<br>
+<p>
+Denne fortellingen kommer fra <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href='http://africanstorybook.org/'>African Storybook Project</a> til alle verdens språk.
+<p>
+Du kan se den originale fortellingen på ASP-websida <a href='http://africanstorybook.org/stories/goat-dog-and-cow'>her</a>
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
+<p><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
